dark mode bug

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -20,8 +20,8 @@ body {
   }
 
   @media (prefers-color-scheme: light) {
-    --background: var(--dark);
-    --text: var(--light);
+    --background: var(--light);
+    --text: var(--dark);
   }
   background: var(--background);
   color: var(--text);
